[bdist_wheel]
universal = 1

[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[pycodestyle]
# We exclude packages we don't maintain
exclude = .eggs,.tox,gntp,tweepy,pushjet
ignore = E722,W503,W504
statistics = true

[flake8]
# We exclude packages we don't maintain
exclude = .eggs,.tox,gntp,tweepy,pushjet
ignore = E722,W503,W504
statistics = true

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose -ra
python_files = test/test_*.py
filterwarnings =
	once::Warning
strict = true
